$Id: ChangeLog,v 1.498 2009/01/04 04:52:39 thiagocorrea Exp $

2008-01-04  Thiago A. Correa <thiago.correa@gmail.com>
        
	* tools/nutconf/nutcomponent.c,
	* tools/nutconf/nutconfdoc.cpp:
	      Add .svn to ignore list when copying files and
	      reduce some duplicated code.
	      
2008-01-04  Thiago A. Correa <thiago.correa@gmail.com>
        
	* tools/nutconf/nutcomponent.c:
	      Update lua initialization to conform to lua 5.x API change.
	      This change should still be compatible with 4.x.

2008-01-04  Thiago A. Correa <thiago.correa@gmail.com>
        
	* tools/nutconf/mainframe.cpp,
	* tools/nutconf/nutconfdoc.cpp:
	      Allow nutconf to build with _UNICODE under Win32. 

2008-12-24  Thiago A. Correa <thiago.correa@gmail.com>
        
	* conf/dev/dev.nut, 
          Improve Serial Bit Bang drivers dependency check
          in nutconf.

2008-12-19  Ole Reinhardt <ole.reinhardt@thermotemp.de>
        
	* arch/arm/dev/gpioa_at91.c, 
	  arch/arm/dev/gpiob_at91.c, 
	  arch/arm/dev/gpioc_at91.c:
          Fixed irq enable / disable bug  

2008-11-12  Harald Kipp  <harald.kipp@egnite.de>

	* conf/arch/arm.nut, dev/at45db.c: Enable DataFlash support
	for EIR board.


2008-10-26  Ole Reinhardt <ole.reinhardt@thermotemp.de>
	* tools/crurom/crurom.c: Added .svn to the list of directories to   
          ignore when creating urom.c

2008-10-22  Harald Kipp  <harald.kipp@egnite.de>

	* arch/arm/dev/usart0at91.c, arch/arm/dev/usart1at91.c,
	arch/arm/dev/usartat91.c, conf/arch/arch.nut,
	include/arch/arm/at91_us.h, include/arch/arm/at91sam7s.h,
	include/arch/arm/at91sam7se.h, include/arch/arm/at91sam7x.h,
	include/arch/arm/at91sam9260.h, include/arch/arm/at91sam9xe.h,
	include/cfg/uart.h: Prepared AT91 UART hardware handshake.

	* conf/arch/arm.nut: Added MCU family macros and AT91 UART 
	hardware handshake.

	* conf/dev/dev.nut, include/dev/sbi_mmc.h, dev/sbi_mmc.c,
	dev/sbi0mmc0.c, dev/sbi0mmc1.c, dev/sbi1mmc0.c, dev/sbi1mmc1.c: